--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,11 @@
 .card {
     font-size: 10em;
     flex: 0 0 7.6%;
+
+    @media screen and (max-width: 600px) {
+        font-size: 4em;
+        flex: 0 0 10%;
+    }
 }
 
 .red {
