Layout and styling

--- a/src/index.scss
+++ b/src/index.scss
@@ -20,3 +20,14 @@
 .back {
     cursor: pointer;
 }
+
+.controls {
+    font-size: 3em;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+    button {
+        font-size: 0.7em;
+    }
+}
