Card font changed to DejaVu Sans

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@
 
 .card {
     font-size: 10em;
-    font-family: "Droid Sans", sans-serif;
+    font-family: "DejaVu Sans", sans-serif;
     flex: 0 0 7.6%;
 
     @media screen and (max-width: 600px) {
