Added SVGs for card faces and back

--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,10 @@
     @media screen and (max-width: 1024px) {
         font-size: 6.9em;
     }
+
+    img {
+        height: 1em;
+    }
 }
 
 .red {
