--- a/src/index.scss
+++ b/src/index.scss
@@ -18,7 +18,25 @@ body {
 
     img {
         height: 11em;
-        width: 8em;
+        width: auto;
+    }
+
+    @media (min-device-width: 600px) {
+        flex: 0 0 9%;
+        height: 8em;
+
+        img {
+            height: 7em;
+        }
+    }
+
+    @media (min-device-width: 1025px) {
+        flex: 0 0 7.6%;
+        height: 14em;
+
+        img {
+            height: 11em;
+        }
     }
 }
 
@@ -32,6 +50,10 @@ body {
     align-items: center;
     justify-content: left;
     margin: 0.7em 0.5em;
+
+    @media (min-device-width: 600px) {
+        margin: 0.3em 0.1em;
+    }
 }
 
 .btn {
@@ -47,9 +69,17 @@ body {
     &:focus {
         outline: none;
     }
+
+    @media (min-device-width: 600px) {
+        font-size: 1em;
+    }
 }
 
 .timer {
     font-size: 2.1em;
     margin-left: 20%;
+
+    @media (min-device-width: 600px) {
+        font-size: 1.4em;
+    }
 }
