--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,10 @@
 $primary-color: seagreen;
+$secondary-color: white;
+$primary-font: "Ubuntu", sans-serif;
 
 body {
-    font-family: "Montserrat", sans-serif;
-    color: white;
+    font-family: $primary-font;
+    color: $secondary-color;
     background-color: $primary-color;
 }
 
@@ -41,7 +43,7 @@ body {
     }
 }
 
-.back {
+.card--back {
     cursor: pointer;
 }
 
@@ -59,11 +61,11 @@ body {
 
 .btn {
     color: $primary-color;
-    background-color: white;
-    border: 2px solid white;
+    background-color: $secondary-color;
+    border: 2px solid $secondary-color;
     border-radius: 100px;
     padding: 2px 20px;
-    font-family: "Ubuntu", sans-serif;
+    font-family: $primary-font;
     font-size: 2em;
     width: 5em; 
     text-align: center;
@@ -78,6 +80,18 @@ body {
     }
 }
 
+.home-btn {
+    background-color: $primary-color;
+    border: none;
+    color: $secondary-color;
+    cursor: pointer;
+    font-size: 6em;
+
+    @media (min-device-width: 600px) {
+        font-size: 2.5em;
+    }
+}
+
 .menu-list {
     display: flex;
     flex-direction: column;
@@ -88,7 +102,7 @@ body {
 
 .menu-list--item {
     color: $primary-color;
-    background-color: white;
+    background-color: $secondary-color;
     border-radius: 100px;
     padding: 2px 20px;
     width: 20em;
@@ -102,7 +116,7 @@ body {
     align-items: center;
     height: 100%;
     font-size: 3em;
-    font-family: "Ubuntu", sans-serif;
+    font-family: $primary-font;
     color: $primary-color;
     text-decoration: none;
 }
