--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    padding-top: 6em;
 }
 
 .card {
@@ -35,7 +36,7 @@ body {
 
     @media (min-device-width: 1025px) {
         flex: 0 0 7.6%;
-        height: 14em;
+        height: 12em;
 
         img {
             height: 11em;
@@ -122,10 +123,9 @@ body {
 }
 
 .timer {
-    font-size: 2.1em;
-    margin-left: 20%;
-
-    @media (min-device-width: 600px) {
-        font-size: 1.4em;
-    }
+    position: absolute;
+    font-size: 4em;
+    top: -0.5px;
+    right: 10%;
+    margin: 0.5em;
 }
