Modify padding for mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,11 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    padding-top: 6em;
+    padding-top: 3em;
+
+    @media (min-device-width: 600px) {
+        padding-top: 6em;
+    }
 }
 
 .card {
