--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    padding-top: 1em;
+    padding-top: 0;
 
     @media (min-device-width: 600px) {
         padding-top: 6em;
@@ -90,7 +90,9 @@ body {
     border: none;
     color: $secondary-color;
     cursor: pointer;
-    font-size: 6em;
+    font-family: $primary-font;
+    font-size: 5em;
+    text-decoration: none;
 
     @media (min-device-width: 600px) {
         font-size: 2.5em;
@@ -129,7 +131,11 @@ body {
 .timer {
     position: absolute;
     font-size: 4em;
-    top: -0.5px;
+    top: 0;
     right: 10%;
-    margin: 0.5em;
+    margin: 0.25em;
+
+    @media (min-device-width: 600px) {
+      margin: 0.5em;
+    }
 }
